--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <h1>Emily's Portfolio</h1>
     <img src="thisone.jpg">
-    <h2> Hi! I'm Emily and this is my portfolio. This is where I include projects for my all women's professional coding cohort at MIT </h2>
+    <h2> Hi! I'm Emily and this is my portfolio. 
+        This is where I include projects for my all women's professional coding cohort at MIT. </h2>
 </html>
