--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
+    <link href="./styles.css" rel="stylesheet" />
+   </head>
      <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#news">News</a>
@@ -15,4 +16,5 @@
     <img src="thisone.jpg">
     <h2> Hi! I'm Emily and this is my portfolio. 
         This is where I include projects for my all women's professional coding cohort at MIT. </h2>
+         <script src="./mapanimation.js"></script>
 </html>
