--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .grid > div:neth-child(odd){
     background:#ddd;
     }
-    
+          </style>
    </head>
      <div class="topnav">
   <a class="active" href="#home">Home</a>
