--- a/index.html
+++ b/index.html
@@ -38,5 +38,18 @@
    <div>
    Bus Activity
    </div>
+        <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
+</div>
          <script src="./mapanimation.js"></script>
 </html>
